# HPC-02614

./: .gitignore  README.md
Assignment-1/: Makefile  Makefile.bak  README.md  clean_experiments.sh  cpu-machine-details.sub  datatools.c  datatools.h  gprofng_batch.sub  main.c  matalg.7z  matmul.c  matmul.c.old  matmult.c  matmult.h  matrix.h  matrixmul.c  matrixmul_blas.c  mm_batch.sub  perf_batch.sub  plot.gnu  pull_and_run.sh  push_to_git.sh  run_experiments.sh
Assignment-2/: Makefile  clean-up.sh  gauss_seidel.c  gauss_seidel.h  init.c  init.h  jacobi.c  jacobi.h  main.c  poisson_gs  poisson_j  pull_from_git.sh  run_poisson.sub  timing.c  timing.h
Assignment-2/experiments/: generate-plots.sh  plot_bandwidth.gnu  plot_grid_scaling.gnu  plot_scaling.gnu
Assignment-3/: Makefile  Makefile_o  Makefile_p  README  alloc3d.cpp  alloc3d.h  alloc3d.hpp  extract_data.sh  gauss_seidel.cpp  gauss_seidel.hpp  gen_all_plots.sh  init.cpp  init.hpp  jacobi.cpp  jacobi.hpp  jacobi_bench.sub  main.cpp  matmult.cpp  matmult.h  matmult.hpp  mm_batch_gpu.sub  ncu_batch_gpu.sub  ncu_mm_batch.sub  nv-compute.sh  plot_asy_offload.gnu  plot_blk_offload.gnu  plot_lib_offload.gnu  plot_mkn_mnk_offload.gnu  plot_mkn_omp_lib.gnu  plot_performance.gnu  print.cpp  print.hpp  timing.cpp  timing.h  timing.hpp
Assignment-3/experiments/: generate_plots.sh  plot_bw_vs_grid.gnu  plot_gflops_vs_grid.gnu  plot_speedup_dual.gnu  (+1 more)
Week-2/Day-1/: CMakeLists.txt  Makefile  main.cpp  matrix_vector.cpp  matrix_vector.h  pi  pi.cpp  pi.h  plot.gnu  xtime.cpp  xtime.h
day-1/: matrixadd.c
(+37 files in other folders)
